# itkdb-browser

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  tbump.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py
src/itkdb_browser/: __init__.py  __main__.py  draggable_list_view.py  tui.css  tui.py
tests/: test_package.py
