[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "itkdb_browser"
authors = [
  { name = "Giordon Stark", email = "kratsg@gmail.com" },
]
description = "TUI browser for ITk Production DB using itkdb"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
   "typing_extensions >=3.7; python_version<'3.8'",
   "typer",
   "rich >= 12.0.0",
   "textual >=0.1.17",
   "itkdb"
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "Sphinx>=4.0",
  "myst_parser>=0.13",
  "sphinx-book-theme>=0.1.0",
  "sphinx_copybutton",
]

[project.urls]
Homepage = "https://github.com/kratsg/itkdb-browser"
"Bug Tracker" = "https://github.com/kratsg/itkdb-browser/issues"
Discussions = "https://github.com/kratsg/itkdb-browser/discussions"
Changelog = "https://github.com/kratsg/itkdb-browser/releases"

[project.scripts]
itkdb-browser = "itkdb_browser.__main__:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/itkdb_browser/_version.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "tbump>=6.7.0",
    "pylint",
    "build",
    "twine",
]

[tool.hatch.envs.default.scripts]
tag = "tbump {args}"
lint = "pylint src"
build = "python -m build"
validate = "twine check dist/*"
# https://github.com/linkchecker/linkchecker/issues/678
build-check = [
  "build",
  "validate",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = "src"
python_version = "3.7"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[[tool.mypy.overrides]]
module = ["itkdb.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "itkdb_browser.tui"
disable_error_code = ["attr-defined"]

[tool.isort]
profile = "black"


[tool.pylint]
py-version = "3.7"
ignore-paths= ["src/itkdb_browser/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
